// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkLargeSpinner should render correctly 1`] = `
<svg
  className="bpk-spinner bpk-spinner--large bpk-spinner--dark"
  height="24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    clipRule="evenodd"
    d="M12 6.657a.946.946 0 0 1-.943-.943V1.943c0-.519.424-.943.943-.943.519 0 .943.424.943.943v3.771a.946.946 0 0 1-.943.943z"
    opacity=".65"
  />
  <path
    clipRule="evenodd"
    d="M14.671 7.373a.946.946 0 0 1-.345-1.288l1.886-3.266a.946.946 0 0 1 1.288-.345c.45.26.604.839.345 1.288L15.96 7.028a.946.946 0 0 1-1.288.345z"
    opacity=".75"
  />
  <path
    clipRule="evenodd"
    d="M16.627 9.329a.945.945 0 0 1 .345-1.288l3.266-1.886a.946.946 0 0 1 1.288.345.946.946 0 0 1-.345 1.288l-3.266 1.886a.946.946 0 0 1-1.288-.345z"
    opacity=".85"
  />
  <path
    clipRule="evenodd"
    d="M17.343 12c0-.519.424-.943.943-.943h3.771c.519 0 .943.424.943.943a.946.946 0 0 1-.943.943h-3.771a.946.946 0 0 1-.943-.943z"
    opacity=".9"
  />
  <path
    clipRule="evenodd"
    d="M16.627 14.671a.946.946 0 0 1 1.288-.345l3.266 1.886c.45.26.604.839.345 1.288a.946.946 0 0 1-1.288.345l-3.266-1.886a.946.946 0 0 1-.345-1.288z"
    opacity=".2"
  />
  <path
    clipRule="evenodd"
    d="M14.671 16.627a.946.946 0 0 1 1.288.345l1.886 3.266a.946.946 0 0 1-.345 1.288.945.945 0 0 1-1.288-.345l-1.886-3.266a.946.946 0 0 1 .345-1.288z"
    opacity=".25"
  />
  <path
    clipRule="evenodd"
    d="M12 17.343c.519 0 .943.424.943.943v3.771A.946.946 0 0 1 12 23a.946.946 0 0 1-.943-.943v-3.771c0-.519.424-.943.943-.943z"
    opacity=".3"
  />
  <path
    clipRule="evenodd"
    d="M9.329 16.627c.449.26.604.839.345 1.288l-1.886 3.266a.945.945 0 0 1-1.288.345.946.946 0 0 1-.345-1.288l1.886-3.266a.946.946 0 0 1 1.288-.345z"
    opacity=".35"
  />
  <path
    clipRule="evenodd"
    d="M7.373 14.671a.946.946 0 0 1-.345 1.288l-3.266 1.886a.946.946 0 0 1-1.288-.345.946.946 0 0 1 .345-1.288l3.266-1.886a.946.946 0 0 1 1.288.345z"
    opacity=".4"
  />
  <path
    clipRule="evenodd"
    d="M6.657 12a.946.946 0 0 1-.943.943H1.943A.946.946 0 0 1 1 12c0-.519.424-.943.943-.943h3.771c.519 0 .943.424.943.943z"
    opacity=".45"
  />
  <path
    clipRule="evenodd"
    d="M7.373 9.329a.946.946 0 0 1-1.288.345L2.819 7.788A.946.946 0 0 1 2.474 6.5a.946.946 0 0 1 1.288-.345L7.028 8.04a.946.946 0 0 1 .345 1.288z"
    opacity=".5"
  />
  <path
    clipRule="evenodd"
    d="M9.329 7.373a.946.946 0 0 1-1.288-.345L6.155 3.762A.946.946 0 0 1 6.5 2.474a.946.946 0 0 1 1.288.345l1.886 3.266a.946.946 0 0 1-.345 1.288z"
    opacity=".55"
  />
</svg>
`;

exports[`BpkLargeSpinner should render correctly with a "alignToButton" attribute 1`] = `
<svg
  className="bpk-spinner bpk-spinner--large bpk-spinner--dark bpk-spinner--align-to-large-button"
  height="24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    clipRule="evenodd"
    d="M12 6.657a.946.946 0 0 1-.943-.943V1.943c0-.519.424-.943.943-.943.519 0 .943.424.943.943v3.771a.946.946 0 0 1-.943.943z"
    opacity=".65"
  />
  <path
    clipRule="evenodd"
    d="M14.671 7.373a.946.946 0 0 1-.345-1.288l1.886-3.266a.946.946 0 0 1 1.288-.345c.45.26.604.839.345 1.288L15.96 7.028a.946.946 0 0 1-1.288.345z"
    opacity=".75"
  />
  <path
    clipRule="evenodd"
    d="M16.627 9.329a.945.945 0 0 1 .345-1.288l3.266-1.886a.946.946 0 0 1 1.288.345.946.946 0 0 1-.345 1.288l-3.266 1.886a.946.946 0 0 1-1.288-.345z"
    opacity=".85"
  />
  <path
    clipRule="evenodd"
    d="M17.343 12c0-.519.424-.943.943-.943h3.771c.519 0 .943.424.943.943a.946.946 0 0 1-.943.943h-3.771a.946.946 0 0 1-.943-.943z"
    opacity=".9"
  />
  <path
    clipRule="evenodd"
    d="M16.627 14.671a.946.946 0 0 1 1.288-.345l3.266 1.886c.45.26.604.839.345 1.288a.946.946 0 0 1-1.288.345l-3.266-1.886a.946.946 0 0 1-.345-1.288z"
    opacity=".2"
  />
  <path
    clipRule="evenodd"
    d="M14.671 16.627a.946.946 0 0 1 1.288.345l1.886 3.266a.946.946 0 0 1-.345 1.288.945.945 0 0 1-1.288-.345l-1.886-3.266a.946.946 0 0 1 .345-1.288z"
    opacity=".25"
  />
  <path
    clipRule="evenodd"
    d="M12 17.343c.519 0 .943.424.943.943v3.771A.946.946 0 0 1 12 23a.946.946 0 0 1-.943-.943v-3.771c0-.519.424-.943.943-.943z"
    opacity=".3"
  />
  <path
    clipRule="evenodd"
    d="M9.329 16.627c.449.26.604.839.345 1.288l-1.886 3.266a.945.945 0 0 1-1.288.345.946.946 0 0 1-.345-1.288l1.886-3.266a.946.946 0 0 1 1.288-.345z"
    opacity=".35"
  />
  <path
    clipRule="evenodd"
    d="M7.373 14.671a.946.946 0 0 1-.345 1.288l-3.266 1.886a.946.946 0 0 1-1.288-.345.946.946 0 0 1 .345-1.288l3.266-1.886a.946.946 0 0 1 1.288.345z"
    opacity=".4"
  />
  <path
    clipRule="evenodd"
    d="M6.657 12a.946.946 0 0 1-.943.943H1.943A.946.946 0 0 1 1 12c0-.519.424-.943.943-.943h3.771c.519 0 .943.424.943.943z"
    opacity=".45"
  />
  <path
    clipRule="evenodd"
    d="M7.373 9.329a.946.946 0 0 1-1.288.345L2.819 7.788A.946.946 0 0 1 2.474 6.5a.946.946 0 0 1 1.288-.345L7.028 8.04a.946.946 0 0 1 .345 1.288z"
    opacity=".5"
  />
  <path
    clipRule="evenodd"
    d="M9.329 7.373a.946.946 0 0 1-1.288-.345L6.155 3.762A.946.946 0 0 1 6.5 2.474a.946.946 0 0 1 1.288.345l1.886 3.266a.946.946 0 0 1-.345 1.288z"
    opacity=".55"
  />
</svg>
`;

exports[`BpkLargeSpinner should render correctly with a "className" attribute 1`] = `
<svg
  className="bpk-spinner bpk-spinner--large bpk-spinner--dark my-custom-class"
  height="24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    clipRule="evenodd"
    d="M12 6.657a.946.946 0 0 1-.943-.943V1.943c0-.519.424-.943.943-.943.519 0 .943.424.943.943v3.771a.946.946 0 0 1-.943.943z"
    opacity=".65"
  />
  <path
    clipRule="evenodd"
    d="M14.671 7.373a.946.946 0 0 1-.345-1.288l1.886-3.266a.946.946 0 0 1 1.288-.345c.45.26.604.839.345 1.288L15.96 7.028a.946.946 0 0 1-1.288.345z"
    opacity=".75"
  />
  <path
    clipRule="evenodd"
    d="M16.627 9.329a.945.945 0 0 1 .345-1.288l3.266-1.886a.946.946 0 0 1 1.288.345.946.946 0 0 1-.345 1.288l-3.266 1.886a.946.946 0 0 1-1.288-.345z"
    opacity=".85"
  />
  <path
    clipRule="evenodd"
    d="M17.343 12c0-.519.424-.943.943-.943h3.771c.519 0 .943.424.943.943a.946.946 0 0 1-.943.943h-3.771a.946.946 0 0 1-.943-.943z"
    opacity=".9"
  />
  <path
    clipRule="evenodd"
    d="M16.627 14.671a.946.946 0 0 1 1.288-.345l3.266 1.886c.45.26.604.839.345 1.288a.946.946 0 0 1-1.288.345l-3.266-1.886a.946.946 0 0 1-.345-1.288z"
    opacity=".2"
  />
  <path
    clipRule="evenodd"
    d="M14.671 16.627a.946.946 0 0 1 1.288.345l1.886 3.266a.946.946 0 0 1-.345 1.288.945.945 0 0 1-1.288-.345l-1.886-3.266a.946.946 0 0 1 .345-1.288z"
    opacity=".25"
  />
  <path
    clipRule="evenodd"
    d="M12 17.343c.519 0 .943.424.943.943v3.771A.946.946 0 0 1 12 23a.946.946 0 0 1-.943-.943v-3.771c0-.519.424-.943.943-.943z"
    opacity=".3"
  />
  <path
    clipRule="evenodd"
    d="M9.329 16.627c.449.26.604.839.345 1.288l-1.886 3.266a.945.945 0 0 1-1.288.345.946.946 0 0 1-.345-1.288l1.886-3.266a.946.946 0 0 1 1.288-.345z"
    opacity=".35"
  />
  <path
    clipRule="evenodd"
    d="M7.373 14.671a.946.946 0 0 1-.345 1.288l-3.266 1.886a.946.946 0 0 1-1.288-.345.946.946 0 0 1 .345-1.288l3.266-1.886a.946.946 0 0 1 1.288.345z"
    opacity=".4"
  />
  <path
    clipRule="evenodd"
    d="M6.657 12a.946.946 0 0 1-.943.943H1.943A.946.946 0 0 1 1 12c0-.519.424-.943.943-.943h3.771c.519 0 .943.424.943.943z"
    opacity=".45"
  />
  <path
    clipRule="evenodd"
    d="M7.373 9.329a.946.946 0 0 1-1.288.345L2.819 7.788A.946.946 0 0 1 2.474 6.5a.946.946 0 0 1 1.288-.345L7.028 8.04a.946.946 0 0 1 .345 1.288z"
    opacity=".5"
  />
  <path
    clipRule="evenodd"
    d="M9.329 7.373a.946.946 0 0 1-1.288-.345L6.155 3.762A.946.946 0 0 1 6.5 2.474a.946.946 0 0 1 1.288.345l1.886 3.266a.946.946 0 0 1-.345 1.288z"
    opacity=".55"
  />
</svg>
`;

exports[`BpkLargeSpinner should render correctly with type as light 1`] = `
<svg
  className="bpk-spinner bpk-spinner--large bpk-spinner--light"
  height="24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    clipRule="evenodd"
    d="M12 6.657a.946.946 0 0 1-.943-.943V1.943c0-.519.424-.943.943-.943.519 0 .943.424.943.943v3.771a.946.946 0 0 1-.943.943z"
    opacity=".65"
  />
  <path
    clipRule="evenodd"
    d="M14.671 7.373a.946.946 0 0 1-.345-1.288l1.886-3.266a.946.946 0 0 1 1.288-.345c.45.26.604.839.345 1.288L15.96 7.028a.946.946 0 0 1-1.288.345z"
    opacity=".75"
  />
  <path
    clipRule="evenodd"
    d="M16.627 9.329a.945.945 0 0 1 .345-1.288l3.266-1.886a.946.946 0 0 1 1.288.345.946.946 0 0 1-.345 1.288l-3.266 1.886a.946.946 0 0 1-1.288-.345z"
    opacity=".85"
  />
  <path
    clipRule="evenodd"
    d="M17.343 12c0-.519.424-.943.943-.943h3.771c.519 0 .943.424.943.943a.946.946 0 0 1-.943.943h-3.771a.946.946 0 0 1-.943-.943z"
    opacity=".9"
  />
  <path
    clipRule="evenodd"
    d="M16.627 14.671a.946.946 0 0 1 1.288-.345l3.266 1.886c.45.26.604.839.345 1.288a.946.946 0 0 1-1.288.345l-3.266-1.886a.946.946 0 0 1-.345-1.288z"
    opacity=".2"
  />
  <path
    clipRule="evenodd"
    d="M14.671 16.627a.946.946 0 0 1 1.288.345l1.886 3.266a.946.946 0 0 1-.345 1.288.945.945 0 0 1-1.288-.345l-1.886-3.266a.946.946 0 0 1 .345-1.288z"
    opacity=".25"
  />
  <path
    clipRule="evenodd"
    d="M12 17.343c.519 0 .943.424.943.943v3.771A.946.946 0 0 1 12 23a.946.946 0 0 1-.943-.943v-3.771c0-.519.424-.943.943-.943z"
    opacity=".3"
  />
  <path
    clipRule="evenodd"
    d="M9.329 16.627c.449.26.604.839.345 1.288l-1.886 3.266a.945.945 0 0 1-1.288.345.946.946 0 0 1-.345-1.288l1.886-3.266a.946.946 0 0 1 1.288-.345z"
    opacity=".35"
  />
  <path
    clipRule="evenodd"
    d="M7.373 14.671a.946.946 0 0 1-.345 1.288l-3.266 1.886a.946.946 0 0 1-1.288-.345.946.946 0 0 1 .345-1.288l3.266-1.886a.946.946 0 0 1 1.288.345z"
    opacity=".4"
  />
  <path
    clipRule="evenodd"
    d="M6.657 12a.946.946 0 0 1-.943.943H1.943A.946.946 0 0 1 1 12c0-.519.424-.943.943-.943h3.771c.519 0 .943.424.943.943z"
    opacity=".45"
  />
  <path
    clipRule="evenodd"
    d="M7.373 9.329a.946.946 0 0 1-1.288.345L2.819 7.788A.946.946 0 0 1 2.474 6.5a.946.946 0 0 1 1.288-.345L7.028 8.04a.946.946 0 0 1 .345 1.288z"
    opacity=".5"
  />
  <path
    clipRule="evenodd"
    d="M9.329 7.373a.946.946 0 0 1-1.288-.345L6.155 3.762A.946.946 0 0 1 6.5 2.474a.946.946 0 0 1 1.288.345l1.886 3.266a.946.946 0 0 1-.345 1.288z"
    opacity=".55"
  />
</svg>
`;

exports[`BpkLargeSpinner should render correctly with type as primary 1`] = `
<svg
  className="bpk-spinner bpk-spinner--large bpk-spinner--primary"
  height="24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    clipRule="evenodd"
    d="M12 6.657a.946.946 0 0 1-.943-.943V1.943c0-.519.424-.943.943-.943.519 0 .943.424.943.943v3.771a.946.946 0 0 1-.943.943z"
    opacity=".65"
  />
  <path
    clipRule="evenodd"
    d="M14.671 7.373a.946.946 0 0 1-.345-1.288l1.886-3.266a.946.946 0 0 1 1.288-.345c.45.26.604.839.345 1.288L15.96 7.028a.946.946 0 0 1-1.288.345z"
    opacity=".75"
  />
  <path
    clipRule="evenodd"
    d="M16.627 9.329a.945.945 0 0 1 .345-1.288l3.266-1.886a.946.946 0 0 1 1.288.345.946.946 0 0 1-.345 1.288l-3.266 1.886a.946.946 0 0 1-1.288-.345z"
    opacity=".85"
  />
  <path
    clipRule="evenodd"
    d="M17.343 12c0-.519.424-.943.943-.943h3.771c.519 0 .943.424.943.943a.946.946 0 0 1-.943.943h-3.771a.946.946 0 0 1-.943-.943z"
    opacity=".9"
  />
  <path
    clipRule="evenodd"
    d="M16.627 14.671a.946.946 0 0 1 1.288-.345l3.266 1.886c.45.26.604.839.345 1.288a.946.946 0 0 1-1.288.345l-3.266-1.886a.946.946 0 0 1-.345-1.288z"
    opacity=".2"
  />
  <path
    clipRule="evenodd"
    d="M14.671 16.627a.946.946 0 0 1 1.288.345l1.886 3.266a.946.946 0 0 1-.345 1.288.945.945 0 0 1-1.288-.345l-1.886-3.266a.946.946 0 0 1 .345-1.288z"
    opacity=".25"
  />
  <path
    clipRule="evenodd"
    d="M12 17.343c.519 0 .943.424.943.943v3.771A.946.946 0 0 1 12 23a.946.946 0 0 1-.943-.943v-3.771c0-.519.424-.943.943-.943z"
    opacity=".3"
  />
  <path
    clipRule="evenodd"
    d="M9.329 16.627c.449.26.604.839.345 1.288l-1.886 3.266a.945.945 0 0 1-1.288.345.946.946 0 0 1-.345-1.288l1.886-3.266a.946.946 0 0 1 1.288-.345z"
    opacity=".35"
  />
  <path
    clipRule="evenodd"
    d="M7.373 14.671a.946.946 0 0 1-.345 1.288l-3.266 1.886a.946.946 0 0 1-1.288-.345.946.946 0 0 1 .345-1.288l3.266-1.886a.946.946 0 0 1 1.288.345z"
    opacity=".4"
  />
  <path
    clipRule="evenodd"
    d="M6.657 12a.946.946 0 0 1-.943.943H1.943A.946.946 0 0 1 1 12c0-.519.424-.943.943-.943h3.771c.519 0 .943.424.943.943z"
    opacity=".45"
  />
  <path
    clipRule="evenodd"
    d="M7.373 9.329a.946.946 0 0 1-1.288.345L2.819 7.788A.946.946 0 0 1 2.474 6.5a.946.946 0 0 1 1.288-.345L7.028 8.04a.946.946 0 0 1 .345 1.288z"
    opacity=".5"
  />
  <path
    clipRule="evenodd"
    d="M9.329 7.373a.946.946 0 0 1-1.288-.345L6.155 3.762A.946.946 0 0 1 6.5 2.474a.946.946 0 0 1 1.288.345l1.886 3.266a.946.946 0 0 1-.345 1.288z"
    opacity=".55"
  />
</svg>
`;
